--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#00FF0A</color>
+    <color name="background">#EFEFEF</color>
+    <color name="pink">#FF4081</color>
+
+
 </resources>
